# spdx

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
spdx-cli/: Cargo.toml
spdx-cli/src/: init.rs  main.rs
spdx-cli/src/commands/: list.rs  mod.rs  name.rs  repl.rs
spdx-lib/: Cargo.toml  build.rs
spdx-lib/src/: cargo_data.rs  lib.rs  license_data.rs  license_exception_id.rs  license_expression_lexer.rs  license_expression_parser.rs  license_id.rs  license_provider.rs  spdx.l  spdx.y  store.rs
