[package]
name = "spdx-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
jwalk = "0.6"
rayon = "1.2"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
spdx-lib = { path = "../spdx-lib" }
toml = { version="0.7", default_features = true }
tracing = "0.1"
tracing-subscriber = "0.3"
