[package]
name = "spdx-lib"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.75"
dashmap = "5.5.3"
lrpar = "0.13.3"
lrlex = "0.13.3"
cfgrammar = "0.13.3"
serde_json = "1.0"
url = {version = "2.4.1", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
toml = { version="0.8.2", default_features = true }
chrono = { version = "0.4.31", default_features = true, features = ["serde"] }

[build-dependencies]
lrpar = "0.13.3"
lrlex = "0.13.3"
cfgrammar = "0.13.3"
