[package]
name = "spdx-lib"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
dashmap = "5.4"
lrpar = "0.12"
lrlex = "0.12"
cfgrammar = "0.12"
serde_json = "1.0"
url = {version = "2.4", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
toml = { version="0.7", default_features = true }
chrono = { version = "0.4", default_features = true, features = ["serde"] }

[build-dependencies]
lrpar = "0.12"
lrlex = "0.12"
cfgrammar = "0.12"
