[package]
name = "spdx-lib"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
cfgrammar = "0.12"
chrono = { version = "0.4", default_features = true, features = ["serde"] }
dashmap = "5.4"
lrpar = "0.12"
lrlex = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version="0.7", default_features = true }
url = {version = "2.4", features = ["serde"]}

[build-dependencies]
cfgrammar = "0.12"
lrpar = "0.12"
lrlex = "0.12"
